adding recycle/clean to adapters